<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dd_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/coiny"
            android:text="@string/create_new_profile"
            android:textColor="@color/bronze"
            android:textAlignment="center"
            android:textSize="@dimen/_30ssp"
            android:textStyle="bold"/>

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:gravity="center"
                android:background="@drawable/side_nav_bar"
                app:shapeAppearanceOverlay="@style/Rounded" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Add Image"
                android:textStyle="bold"
                android:textSize="@dimen/_20ssp"/>

        </FrameLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_gravity="center"
            android:ems="10"
            android:textSize="@dimen/sp_20"
            android:hint="@string/user_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/email_address"
            android:textSize="@dimen/sp_20"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="@dimen/sp_20"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <FrameLayout
            android:id="@+id/layoutImageBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:animateLayoutChanges="true">

            <Button
                android:id="@+id/b_signUp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:ems="10"
                android:textSize="@dimen/sp_20"
                android:text="@string/sign_up"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible"/>

        </FrameLayout>

        <TextView
            android:id="@+id/textLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/already_have_account_log_in"
            android:textStyle="bold"
            android:textSize="@dimen/_13ssp" />

    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>